<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Welsh Finance</string>
    <string name="search_hint">Search your records</string>
    <string name="add_accounts">Add Account</string>
    <string name="delete_accounts">Delete Account</string>
    <string name="view_accounts">View Accounts</string>
    <string name="clear_database">Clear Database</string>
    <string name="back">Back</string>
    <string name="accounts">Accounts</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="done">Done</string>
    <string name="account">ACCOUNT:</string>
    <string name="balance">BALANCE:</string>
    <string name="name">NAME:</string>
    <string name="value">VALUE:</string>
    <string name="type">TYPE:</string>
    <string name="every">EVERY:</string>
    <string name="next">NEXT:</string>
    <string name="start_on">START ON:</string>
    <string name="category">CATEGORY:</string>
    <string name="add">add</string>
    <string name="checknum">CHECK NUM:</string>
    <string name="memo">MEMO:</string>
    <string name="date">DATE:</string>
    <string name="time">TIME:</string>
    <string name="scheduled">SCHEDULED:</string>
    <string name="cleared">CLEARED:</string>
    <string name="drawer_open">Drawer is open</string>
    <string name="drawer_closed">Drawer is closed</string>
    <string name="checkbook">Checkbook</string>
    <string name="search">Search</string>
    <string name="transfer">Transfer</string>
    <string name="sort">Sort</string>
    <string name="no_accounts_found">No Accounts Found</string>
    <string name="search_results">Search Results</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_account_selected">No Account Selected</string>
    <string name="select_an_account">Please select an account before attempting to add a transaction</string>
    <string name="okay">Okay</string>
    <string name="transaction">Transaction</string>
    <string name="schedule">Schedule</string>
    <string name="plans">Plans</string>
    <string name="toggle">Toggle</string>
    <string name="acount_id">Account ID</string>
    <string name="offset">Offset</string>
    <string name="rate">Rate</string>
    <string name="card_positive_account">This account is doing well.</string>
    <string name="card_negative_account">This account is overdrawn.</string>
    <string name="card_transaction_not_cleared">This transaction has not been cleared.</string>
    <string name="card_no_accounts_created">No Accounts created yet</string>
    <string name="card_no_accounts">No Accounts</string>
    <string name="cards_transaction_occurred_today">This transaction occurred today.</string>
    <string name="cards_transaction_occurred_yesterday">This transaction occurred yesterday.</string>
    <string name="cards_transaction_occurred_num_days">This transaction occurred %d days ago.</string>
    <string name="no_transactions">No Transactions</string>
    <string name="no_transaction_have_occurred_recently">No Transactions have occurred recently</string>
    <string name="planned_transaction_occurred_today">This planned transaction occurred today</string>
    <string name="planned_transaction_occurred_yesterday">This planned transaction occurred yesterday</string>
    <string name="planned_transaction_tomorrow">This planned transaction is coming up tomorrow</string>
    <string name="planned_transaction_occurred_recently">This planned transaction occurred recently</string>
    <string name="planned_transaction_soon">This planned transaction is coming up</string>
    <string name="no_plans">No Plans</string>
    <string name="no_plans_soon">No Plans are coming up</string>
    <string name="local_backup">Local Backup</string>
    <string name="categories">Categories</string>
    <string name="attachments">Attachments</string>
    <string name="attachment">Attachment</string>
    <string name="appearance">Appearance</string>
    <string name="behavior">Behavior</string>
    <string name="misc">Misc</string>


    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="help">Help</string>

    <string-array name="drawer_items">
        <item>Home</item>
        <item>Checkbook</item>
        <item>Categories</item>
        <item>Plans</item>
        <item>Statistics</item>
        <item>Options</item>
        <item>Help</item>
        <item>Exit</item>
    </string-array>
    <string-array name="transaction_type">
        <item>Withdraw</item>
        <item>Deposit</item>
    </string-array>
    <string-array name="rate_type">
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </string-array>
    <string-array name="link_type">
        <item>Picture</item>
        <item>Video</item>
        <item>Audio</item>
        <item>File</item>
        <item>Contact</item>
        <item>Any</item>
    </string-array>
    <string-array name="sort_options_account">
        <item>Newest</item>
        <item>Oldest</item>
        <item>Largest</item>
        <item>Smallest</item>
        <item>Alphabetical</item>
        <item>None</item>
    </string-array>
    <string-array name="sort_options_transaction">
        <item>Newest</item>
        <item>Oldest</item>
        <item>Largest</item>
        <item>Smallest</item>
        <item>Category</item>
        <item>Type</item>
        <item>Alphabetical</item>
        <item>None</item>
    </string-array>
    <string-array name="transaction_category">
        <item>ALLOWANCE</item>
        <item>ATM</item>
        <item>CHECK</item>
        <item>FOOD</item>
        <item>GASOLINE</item>
        <item>GIFT</item>
        <item>GROCERIES</item>
        <item>MORTGAGE</item>
        <item>OTHER</item>
        <item>PAYCHECK</item>
        <item>RENT</item>
        <item>STARTING BALANCE</item>
        <item>STUDENT LOANS</item>
        <item>TIP</item>
        <item>TRANSFER</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="cancel">Cancel</string>

</resources>