<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/account_menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/account_menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/account_menu_transfer"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/transfer" />

    <item
        android:id="@+id/account_menu_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sort" />
</menu>