<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fadeScrollbars="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/TextView00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account:" />

        <Spinner
            android:id="@+id/spinner_transaction_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/TextView00"
            android:layout_toRightOf="@+id/TextView04"
            android:inputType="text" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_transaction_account"
            android:text="@string/name" />

        <EditText
            android:id="@+id/EditTransactionName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/TextView01"
            android:layout_toRightOf="@+id/TextView04"
            android:inputType="text" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditTransactionName"
            android:text="@string/value" />

        <EditText
            android:id="@+id/EditTransactionValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/TextView02"
            android:layout_toRightOf="@+id/TextView04"
            android:digits="1234567890."
            android:imeOptions="actionNext"
            android:inputType="numberDecimal|phone" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditTransactionValue"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/spinner_transaction_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/TextView03"
            android:layout_toRightOf="@+id/TextView04"
            android:entries="@array/transaction_type" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_transaction_type"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/spinner_transaction_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/TextView04"
            android:layout_toRightOf="@+id/TextView04" />

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_transaction_category"
            android:text="@string/memo" />

        <AutoCompleteTextView
            android:id="@+id/EditTransactionMemo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/TextView06"
            android:layout_toRightOf="@+id/TextView04"
            android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine|textAutoComplete"
            android:maxLength="200"
            android:maxLines="2" />

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditTransactionMemo"
            android:text="Start On:" />

        <Button
            android:id="@+id/ButtonTransactionDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/TextView07"
            android:layout_toRightOf="@+id/TextView04"
            android:onClick="showDatePickerDialog"
            android:text="Date" />

        <TextView
            android:id="@+id/TextView08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ButtonTransactionDate"
            android:text="Repeat" />

        <TextView
            android:id="@+id/TextView08b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextView08"
            android:text="Every:" />

        <EditText
            android:id="@+id/EditRate"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/TextView08"
            android:layout_toRightOf="@+id/TextView04"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinner_rate_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/EditRate"
            android:layout_toRightOf="@+id/EditRate"
            android:entries="@array/rate_type" />

        <TextView
            android:id="@+id/TextView09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditRate"
            android:text="@string/cleared" />

        <CheckBox
            android:id="@+id/CheckTransactionCleared"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/TextView09"
            android:layout_toRightOf="@+id/TextView04"
            android:checked="true" />
    </RelativeLayout>

</ScrollView>